[package]
name = "rust-with-document-detector"
version = "0.1.0"
authors = ["Chamrong THOR"]
description = "Rust with document detection"
license = "MIT/Apache-2.0"
repository = "https://github.com/hype360/rust-with-document-detection"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
